feat: add compnay details and company update api
